@@ -6,7 +6,6 @@ import cool.parser.CoolParser;
 import org.antlr.v4.runtime.ParserRuleContext;
 import org.antlr.v4.runtime.Token;
 
-import java.awt.List;
 import java.io.File;
 import java.util.*;
 import java.util.function.Function;
@@ -217,7 +216,7 @@ public class SymbolTable {
 
     public static TypeSymbol getMostInheritedClass(ArrayList<TypeSymbol> typesList) {
         var types = new ArrayList<>(typesList);
-        var current = types.get(0);
+        var current = types.getFirst();
 
         for (int i = 1; i < types.size(); i++) {
             if (isInheritedClass(current, types.get(i))) {
@@ -226,6 +225,60 @@ public class SymbolTable {
         }
 
         return current;
+    }
+
+    public static boolean isUndefinedMethod(TypeSymbol type, String methodName) {
+        var current = type.getName();
+
+        while (current != null) {
+            if (globals.lookup(current) instanceof TypeSymbol) {
+                return true;
+            }
+
+            if (((ClassSymbol)globals.lookup(current)).symbols.containsKey(methodName)) {
+                return false;
+            }
+
+            current = childToParentMap.get(current);
+        }
+
+        return true;
+    }
+
+    public static Object[] isCallingMethodWithDifferentTypeOfFormals(List<TypeSymbol> typesList, String className, String methodName) {
+        var result = new Object[]{false, null, null, null};
+        var current = className;
+
+        while (current != null) {
+            if (globals.lookup(current) instanceof TypeSymbol) {
+                return result;
+            }
+
+            if (((ClassSymbol)globals.lookup(current)).symbols.containsKey(methodName)) {
+                Optional<Symbol> functionSymbol = ((ClassSymbol) globals.lookup(current)).symbols.values().stream()
+                        .filter(sym -> sym.getName().equals(methodName))
+                        .findFirst();
+
+                if (functionSymbol.isPresent()) {
+                    var currentTypes = ((FunctionSymbol) functionSymbol.get()).symbols.values().stream()
+                            .map(x -> ((IdSymbol) x).getType())
+                            .toList();
+                    var currentIds = ((FunctionSymbol) functionSymbol.get()).symbols.keySet().stream().toList();
+                    var minSize = Math.min(currentTypes.size(), typesList.size());
+
+                    for (int i = 0; i < minSize; i++) {
+                        if (!typesList.get(i).equals(currentTypes.get(i))
+                                && !SymbolTable.isInheritedClass(typesList.get(i), currentTypes.get(i))) {
+                            return new Object[]{true, currentIds.get(i), currentTypes.get(i), i};
+                        }
+                    }
+                }
+            }
+
+            current = childToParentMap.get(current);
+        }
+
+        return result;
     }
 
     public static boolean hasSemanticErrors() {
